# Verfassungsbooks

./: .build.yml  .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs
.github/workflows/: sourcehut-sync.yml
config/: default.toml
data/csl_styles/: apa-7th-edition.csl
data/templates/b8d7844d-a7e3-470e-bea3-7b657bf1d6cf/output/: book.css
data/templates/b8d7844d-a7e3-470e-bea3-7b657bf1d6cf/templates/: main.hbs  metadata.hbs  titlepage.hbs
migrations/2023-11-15-141706_setup/: down.sql  up.sql
sql_queries/: create_login_attempts.sql  create_persons.sql  create_projects.sql  create_projects_users.sql  create_schema_changes.sql  create_templates.sql  create_users.sql
src/: cleaner.rs  data_storage.rs  main.rs  schema.rs  settings.rs  settings_page.rs  utils.rs
src/api/: mod.rs  projects.rs
src/dashboard/: create_project.rs  mod.rs  project_overview.rs
src/db/: connection_pool.rs  login_attempts.rs  mod.rs  projects.rs  setup.rs  templates.rs  users.rs
src/export/: api.rs  download.rs  mod.rs  preprocessing.rs  rendering_manager.rs  zip.rs
src/import/: link_converter.rs  mod.rs  processing.rs  upload.rs  wordpress.rs
src/persons/: api.rs  create.rs  list.rs  mod.rs
src/projects/: api.rs  bibliography_editor.rs  create.rs  editor.rs  list.rs  mod.rs  templates_editor.rs
src/projects/api/: mod.rs  sections.rs
src/session/: errors.rs  login.rs  logout.rs  mod.rs  session_guard.rs  session_storage.rs
src/templates_editor/: api.rs  export_steps.rs  mod.rs  user_interface.rs
src/utils/: api_helpers.rs  block_id_generator.rs  csl.rs  dedup.rs  fs_copy_recursive.rs  lobid_proxy.rs
static/css/: app.css
static/js/: bundle.js  editor.js  general.js  persons.js  precompiled_partials.js  precompiled_templates.js
templates/: bibliography.html.hbs  create_person.html.hbs  create_project.html.hbs  create_template.html.hbs  dashboard.html.hbs  detailed_template.html.hbs  editor.html.hbs  header.html.hbs  login.html.hbs  persons.html.hbs  settings.html.hbs  templates.html.hbs
templates_frontend/: alert_tmpl  bibliography_editor_entries  bibliography_editor_entry  bibliography_editor_entry_person_row  bibliography_editor_sidebar  editor_add_authors_li  editor_add_editors_li  editor_add_identifier_row  editor_add_person_li  editor_content_block  editor_content_block_custom_html  editor_content_block_formatted_text  editor_content_block_heading  editor_content_block_link  editor_content_block_list  editor_content_block_list_ordered  editor_content_block_list_unordered  editor_content_block_note  editor_content_block_paragraph  editor_content_block_textelement  editor_export_wizard  editor_import_wizard  editor_keyword_gnd_search  editor_keyword_li  editor_main_project_overview  editor_section_authors_li  editor_section_editors_li  editor_section_identifier_row  editor_section_view  editor_sidebar  editor_sidebar_content_block_settings  editor_sidebar_section  editor_sidebar_section_overview  editor_textelement_edit_bar  persons_bio_edit  persons_edit  search_person_li  template_editor_asset_edit  template_editor_asset_row  template_editor_assets  (+6 more)
typescript/: BibliographyEditor.ts  BlockStyleTune.ts  CitationTool.ts  ContentBlockParser.ts  CustomStyleTool.ts  Editor.ts  Export.ts  General.ts  Import.ts  NoteTool.ts  Persons.ts  ProjectOverview.ts  ProjectSettings.ts  RenderPDF.ts  RenderPDF.ts.old  SectionEditor.ts  SectionView.ts  Settings.ts  Sidebar.ts  TemplateEditor.ts  UserTools.ts  api_requests.ts  editor.ts  package-lock.json  package.json  tools.ts  webpack.config.js
typescript_old/: ContentBlockParser.ts  Editor-old.ts  General.ts  Persons.ts  ProjectOverview.ts  SectionView.ts  Sidebar.ts
