[package]
name = "Verfassungsbooks"
version = "0.1.0"
edition = "2021"
authors = ["Keanu Dölle <kd@verfassungsblog.de>"]
repository = "https://github.com/Verfassungsblog/verfassungsbooks"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["secrets", "json"] }
sqlx = {version = "0.7", features=["postgres", "runtime-tokio", "macros", "json", "uuid", "chrono"]}
dotenvy = "0.15"
config = "0.13.1"
serde = "1.0.192"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0.192"
rand = "0.8.5"
rocket_dyn_templates = { version = "=0.1.0", features = ["handlebars"] }
argon2 = "0.5.2"
uuid = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
schemars = { version = "0.8.16", features = ["chrono", "uuid1"] }