[package]
name = "Verfassungsbooks"
version = "0.1.0"
edition = "2021"
authors = ["Keanu Dölle <kd@verfassungsblog.de>"]
repository = "https://github.com/Verfassungsblog/verfassungsbooks"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["secrets", "json"] }
dotenvy = "0.15"
config = "0.13.1"
serde = { version = "1.0.192", features = ["rc"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0.192"
rand = "0.8.5"
rocket_dyn_templates = { version = "=0.1.0", features = ["handlebars"] }
argon2 = "0.5.2"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
schemars = { version = "0.8.16", features = ["chrono", "uuid1"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
tokio = { version = "1.35.0", features = ["full"] }
async-trait = "0.1.74"
reqwest = { version = "0.11.23", features=["json"] }
serde_with = "3.5.0"
