[package]
name = "Verfassungsbooks"
version = "0.1.0"
edition = "2021"
authors = ["Keanu Dölle <kd@verfassungsblog.de>"]
repository = "https://github.com/Verfassungsblog/verfassungsbooks"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#vb-exchange = {git = "https://git.sr.ht/~verfassungsblog/Verfassungsbooks-Exchange-Lib"}
vb-exchange = { path = "../Verfassungsbooks-Exchange-Lib" }
rocket = { version = "=0.5.0", features = ["secrets", "json"] }
dotenvy = "0.15"
config = "0.14"
serde = { version = "1.0.197", features = ["rc", "derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
rand = "0.8.5"
rocket_dyn_templates = { version = "=0.1.0", features = ["handlebars"] }
argon2 = "0.5.2"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
schemars = { version = "0.8.16", features = ["chrono", "uuid1"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
tokio = { version = "1.35.0", features = ["full"] }
async-trait = "0.1.74"
reqwest = { version = "0.11.23", features=["json"] }
serde_with = "3.6"
regex = "1.10.3"
handlebars = {version = "5.1.0", features = ["dir_source"]}
hyphenation = {version = "0.8.4", features = ["embed_all"]}
qrcode = "0.13"
image = "0.24.9"
base64 = "0.22.0"
num-integer = "0.1.46"
pandoc = "0.8"
hayagriva= "0.5.2"
unic-langid-impl = "0.9.4"
html_parser = "0.7.0"
url = "2.5.0"
async-recursion = "1.1.0"
tokio-rustls = "0.26.0"
zip = "2.2.0"